# heimdall

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/args/: mod.rs
src/color/: ascii.rs  mod.rs
src/config/: mod.rs
src/file/: mod.rs  read.rs
src/log/: filter.rs  mod.rs
src/parse/: dfa_parser.rs  mod.rs  regex_parser.rs
